--- a/src/styles/_queries.scss
+++ b/src/styles/_queries.scss
@@ -1,4 +1,4 @@
 // Queries
-$l: 'screen and (min-width: 60em)';
-$m: 'screen and (min-width: 30em) and (max-width: 60em)';
-$ns: 'screen and (min-width: 30em)';
+$l: 'screen and (min-width: 65em)';
+$m: 'screen and (min-width: 48em) and (max-width: 64em)';
+$ns: 'screen and (min-width: 48em)';
